# resin-api

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml.example  docker_entrypoint.sh  manage.py  pyproject.toml
annuaire/: admin.py  apps.py  auth.py  languages.json  langues.csv  models.py  serializers.py  tests.py  utils.py  viewsets.py
annuaire/migrations/: 0001_initial.py  0002_alter_member_reviewed.py  0003_member_slug.py  0004_alter_languagechoice_pt2b.py  0005_remove_member_comments.py  0006_member_display_email_alter_member_email_and_more.py  0007_alter_member_gender.py  0008_alter_member_gender.py  0009_member_pronouns_alter_member_birth_year_and_more.py  0010_alter_member_birth_year_alter_member_short_bio.py
annuaire/static/css/: member_admin.css
resin/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
templates/annuaire/emails/: create_member.html  create_member.txt  reviewed_member.html  reviewed_member.txt  send_auth_link.html  send_auth_link.txt  update_member.html  update_member.txt
